Fixed the spacing between the logo and the left links.

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -22,6 +22,7 @@ body {
   justify-content: left;
   display: flex;
   flex-direction: row;
+  gap: 16px;
 }
 
 .rightLinks {
@@ -76,4 +77,5 @@ ul {
   display: flex; 
   flex-direction: row;
   gap: 16px;
+  padding: 0px;
 }
